Fix no-js close button to be visible

--- a/src/scss/06_components/messages/_language-toast.scss
+++ b/src/scss/06_components/messages/_language-toast.scss
@@ -59,6 +59,7 @@ $-toast-arrow-height: $spacing-half;
   }
 }
 
+.nav-toggle__anchor.language-toast__close,
 .nav-toggle__button.language-toast__close {
   @include close-button;
   align-content: center;
